syntax = "proto3";
package pb;

option go_package = "/pb";

message Person {
  string name = 1;
  int32 id = 2;  // Unique ID number for this person.
  string email = 3;
  repeated PhoneNumber phones = 4;
  Timestamp last_updated = 5;

  message PhoneNumber {
    string number = 1;
    PhoneType type = 2;
  }

  enum PhoneType {
    MOBILE = 0;
    HOME = 1;
    WORK = 2;
  }

  message Timestamp {
    int64 seconds = 1;
    int32 nanos = 2;
  }
}